Fixed bug where nav a element would go behind code

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,8 @@ nav > a {
 	white-space: nowrap;
 	width: auto;
 	padding-left: 20px;
+
+	z-index: 999;
 }
 
 nav > a:hover {
